tests/types/errors/safe_index_non_option.mochi
// MEP-16 R6: `?[ ]` is only defined for option-typed receivers.
let xs: list<int> = [1, 2, 3]
let v = xs?[0]
